4/16/2025
~~~~~~~~~~
- Revived the project
- Redesigned with an Object Oriented Approach
- Load into memory on startup, don't constantly read from files
- Stubbed it out and came up the general idea